--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shuaiplus/NodeCrypt.git"
+    "url": "git+https://github.com/IIawaI/NodeCrypt.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/shuaiplus/NodeCrypt/issues"
+    "url": "https://github.com/IIawaI/NodeCrypt/issues"
   },
-  "homepage": "https://github.com/shuaiplus/NodeCrypt#readme",
+  "homepage": "https://github.com/IIawaI/NodeCrypt#readme",
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "cssnano": "^7.0.7",
