--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,6 +3,11 @@ main = "worker/index.js"
 compatibility_date = "2024-09-23"
 compatibility_flags = ["nodejs_compat"]
 
+# 环境变量
+[vars]
+AUTH_USERNAME = ""
+AUTH_PASSWORD_HASH = ""
+
 # 配置静态资源
 [assets]
 directory = "./dist"
