--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,6 +7,8 @@ compatibility_flags = ["nodejs_compat"]
 [vars]
 AUTH_USERNAME = ""
 AUTH_PASSWORD_HASH = ""
+TURNSTILE_SITE_KEY = ""
+TURNSTILE_SECRET_KEY = ""
 
 # 配置静态资源
 [assets]
